--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,9 +3,53 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
+    android:background="#ff5ea3ff">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:src="@mipmap/ic_launcher"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="60dp"
+        android:contentDescription="@string/descLogo" />
+
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtemail"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:inputType="text"
+        android:hint="@string/hintemail"
+        android:background="#ffffffff"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingRight="0dp"
+        android:singleLine="false"
+        android:textIsSelectable="false"
+        android:textSize="20dp"
+        android:paddingStart="15dp"
+        android:paddingLeft="15dp" />
+
+    <EditText
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText"
+        android:inputType="text"
+        android:hint="@string/hintemail"
+        android:background="#ffffffff"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="0dp"
+        android:singleLine="false"
+        android:textIsSelectable="false"
+        android:textSize="20dp"
+        android:layout_marginTop="35dp"
+        android:layout_below="@+id/txtemail"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
