Corrected UI label mistake
~ hintemail -> hintPassword

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/editText"
         android:inputType="text"
-        android:hint="@string/hintemail"
+        android:hint="@string/hintPassword"
         android:background="#ffffffff"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
@@ -47,7 +47,7 @@
         android:paddingRight="0dp"
         android:singleLine="false"
         android:textIsSelectable="false"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:layout_marginTop="35dp"
         android:layout_below="@+id/txtemail"
         android:layout_centerHorizontal="true" />
