--- a/app/src/main/res/layout/activity_symptoms.xml
+++ b/app/src/main/res/layout/activity_symptoms.xml
@@ -1,9 +1,247 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="jaguar.com.patientcare.SymptomsActivity"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#ff5ea3ff"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="jaguar.com.patientcare.SymptomsActivity">
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin">
+
+<RelativeLayout
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    >
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Pain Level"
+        android:id="@+id/txtPainLevel"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textColor="#ffffffff"
+        android:textSize="22sp" />
+
+    <RatingBar
+        android:id="@+id/ratePainRating"
+        android:isIndicator="false"
+        android:stepSize="1.0"
+        android:numStars="5"
+        android:rating="0.0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txtPainLevel"
+        android:layout_centerHorizontal="true"
+        android:progressBackgroundTint="#ffffffff" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Fatigue Level"
+        android:id="@+id/txtFatigueLevel"
+        android:textColor="#ffffffff"
+        android:textSize="22sp"
+        android:layout_below="@+id/ratePainRating"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <RatingBar
+        android:id="@+id/rateFatigueRating"
+        android:isIndicator="false"
+        android:stepSize="1.0"
+        android:numStars="5"
+        android:rating="0.0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:progressBackgroundTint="#ffffffff"
+        android:layout_below="@+id/txtFatigueLevel"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Numbness Level"
+        android:id="@+id/txtNumbnessLevel"
+        android:textColor="#ffffffff"
+        android:textSize="22sp"
+        android:layout_below="@+id/rateFatigueRating"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <RatingBar
+        android:id="@+id/rateNumbnessRating"
+        android:isIndicator="false"
+        android:stepSize="1.0"
+        android:numStars="5"
+        android:rating="0.0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:progressBackgroundTint="#ffffffff"
+        android:layout_below="@+id/txtNumbnessLevel"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Spasticity Level"
+        android:id="@+id/txtSpasticityLevel"
+        android:textColor="#ffffffff"
+        android:textSize="22sp"
+        android:layout_below="@+id/rateNumbnessRating"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <RatingBar
+        android:id="@+id/rateSpasticityRating"
+        android:isIndicator="false"
+        android:stepSize="1.0"
+        android:numStars="5"
+        android:rating="0.0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:progressBackgroundTint="#ffffffff"
+        android:layout_below="@+id/txtSpasticityLevel"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Vision Problems Level"
+        android:id="@+id/txtVisionLevel"
+        android:textColor="#ffffffff"
+        android:textSize="22sp"
+        android:layout_below="@+id/rateSpasticityRating"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <RatingBar
+        android:id="@+id/rateVisionRating"
+        android:isIndicator="false"
+        android:stepSize="1.0"
+        android:numStars="5"
+        android:rating="0.0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:progressBackgroundTint="#ffffffff"
+        android:layout_below="@+id/txtVisionLevel"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Dizziness Level"
+        android:id="@+id/txtDizzinessLevel"
+        android:textColor="#ffffffff"
+        android:textSize="22sp"
+        android:layout_below="@+id/rateVisionRating"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <RatingBar
+        android:id="@+id/rateDizzinessRating"
+        android:isIndicator="false"
+        android:stepSize="1.0"
+        android:numStars="5"
+        android:rating="0.0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:progressBackgroundTint="#ffffffff"
+        android:layout_below="@+id/txtDizzinessLevel"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Bladder Problems Level"
+        android:id="@+id/txtBladderLevel"
+        android:textColor="#ffffffff"
+        android:textSize="22sp"
+        android:layout_below="@+id/rateDizzinessRating"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <RatingBar
+        android:id="@+id/rateBladderRating"
+        android:isIndicator="false"
+        android:stepSize="1.0"
+        android:numStars="5"
+        android:rating="0.0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:progressBackgroundTint="#ffffffff"
+        android:layout_below="@+id/txtBladderLevel"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Cognitive Changes Level"
+        android:id="@+id/txtCognitiveLevel"
+        android:textColor="#ffffffff"
+        android:textSize="22sp"
+        android:layout_below="@+id/rateBladderRating"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <RatingBar
+        android:id="@+id/rateCognitiveRating"
+        android:isIndicator="false"
+        android:stepSize="1.0"
+        android:numStars="5"
+        android:rating="0.0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:progressBackgroundTint="#ffffffff"
+        android:layout_below="@+id/txtCognitiveLevel"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Emotional Changes Level"
+        android:id="@+id/txtEmotionalLevel"
+        android:textColor="#ffffffff"
+        android:textSize="22sp"
+        android:layout_below="@+id/rateCognitiveRating"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <RatingBar
+        android:id="@+id/rateEmotionalRating"
+        android:isIndicator="false"
+        android:stepSize="1.0"
+        android:numStars="5"
+        android:rating="0.0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:progressBackgroundTint="#ffffffff"
+        android:layout_below="@+id/txtEmotionalLevel"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnDone"
+        android:textSize="20sp"
+        android:clickable="false"
+        android:singleLine="false"
+        android:shadowColor="#00000000"
+        android:layout_below="@+id/rateEmotionalRating"
+        android:text="@string/Done"
+        android:layout_alignParentEnd="false"
+        android:onClick="btnDone" />
 
 </RelativeLayout>
+</ScrollView>
