--- a/app/src/main/res/layout/patient_menu_activity.xml
+++ b/app/src/main/res/layout/patient_menu_activity.xml
@@ -5,6 +5,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".PatientMenuActivity"
     android:background="#ff5ea3ff">
 
     <ImageView
@@ -30,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="My Health Summary"
-        android:id="@+id/button"
+        android:id="@+id/btnViewPastRecords"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
@@ -38,8 +39,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Submit Symptom Form"
-        android:id="@+id/button2"
-        android:layout_below="@+id/button"
+        android:id="@+id/btnInputPainLevels"
+        android:layout_below="@+id/btnViewPastRecords"
         android:layout_centerHorizontal="true" />
 
     <Button
@@ -47,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Request Emergency Assistance"
-        android:id="@+id/button3"
+        android:id="@+id/btnEmergency"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="42dp"
