--- a/app/src/main/res/layout/activity_register_patient.xml
+++ b/app/src/main/res/layout/activity_register_patient.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/email"
+        android:id="@+id/regEmail"
         android:layout_marginTop="40dp"
         android:background="#ffffffff"
         android:paddingLeft="15dp"
@@ -41,8 +41,8 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/password"
-        android:layout_below="@+id/email"
+        android:id="@+id/regPassword"
+        android:layout_below="@+id/regEmail"
         android:layout_marginTop="10dp"
         android:background="#ffffffff"
         android:hint="@string/hintPassword"
@@ -54,8 +54,8 @@
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner"
-        android:layout_below="@+id/password"
+        android:id="@+id/regSpinner"
+        android:layout_below="@+id/regPassword"
         android:layout_marginTop="20dp"
         android:background="#ffffffff"
         android:paddingLeft="15dp"
@@ -68,8 +68,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Register"
-        android:id="@+id/button"
-        android:layout_below="@+id/spinner"
+        android:id="@+id/regButton"
+        android:layout_below="@+id/regSpinner"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp" />
 </RelativeLayout>
