first & last names now included in registration

--- a/app/src/main/res/layout/activity_register_patient.xml
+++ b/app/src/main/res/layout/activity_register_patient.xml
@@ -14,8 +14,46 @@
         android:id="@+id/textView2"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         android:textSize="25dp" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textCapWords"
+        android:ems="10"
+        android:id="@+id/regFirstName"
+        android:layout_marginTop="40dp"
+        android:background="#ffffffff"
+        android:paddingLeft="15dp"
+        android:paddingTop="10dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="10dp"
+        android:hint="@string/hintfirst"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentTop="false"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentRight="false"
+        android:layout_alignWithParentIfMissing="false" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textCapWords"
+        android:ems="10"
+        android:id="@+id/regLastName"
+        android:layout_marginTop="10dp"
+        android:background="#ffffffff"
+        android:paddingLeft="15dp"
+        android:paddingTop="10dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="10dp"
+        android:hint="@string/hintlast"
+        android:layout_below="@+id/regFirstName"
+        android:layout_alignParentTop="false"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentRight="false"
+        android:layout_alignWithParentIfMissing="false" />
 
     <EditText
         android:layout_width="match_parent"
@@ -23,14 +61,14 @@
         android:inputType="textEmailAddress"
         android:ems="10"
         android:id="@+id/regEmail"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="10dp"
         android:background="#ffffffff"
         android:paddingLeft="15dp"
         android:paddingTop="10dp"
         android:paddingRight="0dp"
         android:paddingBottom="10dp"
         android:hint="@string/hintemail"
-        android:layout_below="@+id/textView2"
+        android:layout_below="@+id/regLastName"
         android:layout_alignParentTop="false"
         android:layout_alignParentLeft="false"
         android:layout_alignParentRight="false"
