Implemented patient list adapter
+ Patient list adapter
! txtSymptom must display highest symptom
! Patient List should auto-order by highest symptom

--- a/app/src/main/res/layout/activity_patient_list.xml
+++ b/app/src/main/res/layout/activity_patient_list.xml
@@ -26,8 +26,10 @@
         android:divider="#ff5ea3ff"
         android:background="#ffffffff"
         android:dividerHeight="5px"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/txtPatientList"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
