--- a/app/src/main/res/menu/menu_register.xml
+++ b/app/src/main/res/menu/menu_register.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context="jaguar.com.patientcare.RegisterPatientActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/logout" android:title="@string/logout" android:showAsAction="never" />
+    <item android:id="@+id/user" android:title="User" android:showAsAction="never" />
 </menu>
