Prepping for Localization
modified activity_symptoms.xml to pull values from strings. English is
the default language.

--- a/app/src/main/res/layout/activity_symptoms.xml
+++ b/app/src/main/res/layout/activity_symptoms.xml
@@ -18,7 +18,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Pain Level"
+        android:text="@string/pain_level"
         android:id="@+id/txtPainLevel"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -42,7 +42,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Fatigue Level"
+        android:text="@string/fatigue_level"
         android:id="@+id/txtFatigueLevel"
         android:textColor="#ffffffff"
         android:textSize="22sp"
@@ -66,7 +66,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Numbness Level"
+        android:text="@string/numbness_level"
         android:id="@+id/txtNumbnessLevel"
         android:textColor="#ffffffff"
         android:textSize="22sp"
@@ -90,7 +90,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Spasticity Level"
+        android:text="@string/spasticity_level"
         android:id="@+id/txtSpasticityLevel"
         android:textColor="#ffffffff"
         android:textSize="22sp"
@@ -114,7 +114,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Vision Problems Level"
+        android:text="@string/vision_problems_level"
         android:id="@+id/txtVisionLevel"
         android:textColor="#ffffffff"
         android:textSize="22sp"
@@ -138,7 +138,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Dizziness Level"
+        android:text="@string/dizziness_level"
         android:id="@+id/txtDizzinessLevel"
         android:textColor="#ffffffff"
         android:textSize="22sp"
@@ -162,7 +162,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Bladder Problems Level"
+        android:text="@string/bladder_problems_level"
         android:id="@+id/txtBladderLevel"
         android:textColor="#ffffffff"
         android:textSize="22sp"
@@ -186,7 +186,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Cognitive Changes Level"
+        android:text="@string/cognitive_changes_level"
         android:id="@+id/txtCognitiveLevel"
         android:textColor="#ffffffff"
         android:textSize="22sp"
@@ -210,7 +210,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Emotional Changes Level"
+        android:text="@string/emotional_changes_level"
         android:id="@+id/txtEmotionalLevel"
         android:textColor="#ffffffff"
         android:textSize="22sp"
