Added Spanish and French.
Unable to test due to some compilation error I have. Will have to see if
it works properly in class Friday.

--- a/app/src/main/res/layout/activity_patient_list.xml
+++ b/app/src/main/res/layout/activity_patient_list.xml
@@ -7,7 +7,7 @@
     tools:context="jaguar.com.patientcare.PatientListActivity"
     android:background="#ff5ea3ff">
 
-    <TextView android:text="Patient List" android:layout_width="wrap_content"
+    <TextView android:text="@string/patient_list" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#ffffffff"
         android:textSize="75px"
