commenting, PatientSummaryActivity, PatientListActivity rework
patients can now view all of their past health records along with any
comments left on them by doctors. Doctors can comment on current
patient records and dequeue patients. I had to change how
PatientListActivity and PatientListAdapter work to allow for dequeueing
to work. Loading the list of patients is noticeably slower now… but
it’s the best implementation I could think of. All activities now have
unique names in the ActionsBar

and there’s a temp joke icon

--- a/app/src/main/res/layout/activity_symptoms_summary.xml
+++ b/app/src/main/res/layout/activity_symptoms_summary.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#ff5ea3ff">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ff5ea3ff"
@@ -10,12 +15,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="pain"
-        android:id="@+id/pain"
+        android:text="emergency"
+        android:id="@+id/emergency"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
-        android:singleLine="false" />
+        android:singleLine="false"
+        android:textSize="16dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="pain"
+        android:id="@+id/pain"
+        android:layout_below="@+id/emergency"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:textSize="16dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -25,7 +42,8 @@
         android:id="@+id/fatigue"
         android:layout_below="@+id/pain"
         android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="16dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -35,7 +53,8 @@
         android:id="@+id/numbness"
         android:layout_below="@+id/fatigue"
         android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="16dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -45,7 +64,8 @@
         android:id="@+id/spasticity"
         android:layout_below="@+id/numbness"
         android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="16dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -55,7 +75,8 @@
         android:id="@+id/vision"
         android:layout_below="@+id/spasticity"
         android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="16dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -65,7 +86,8 @@
         android:id="@+id/dizziness"
         android:layout_below="@+id/vision"
         android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="16dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -75,7 +97,8 @@
         android:id="@+id/bladder"
         android:layout_below="@+id/dizziness"
         android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="16dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -85,7 +108,8 @@
         android:id="@+id/cognitive"
         android:layout_below="@+id/bladder"
         android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="16dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -96,7 +120,34 @@
         android:layout_below="@+id/cognitive"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
+        android:textSize="16dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Doctor's Comment:"
+        android:id="@+id/dComment"
+        android:layout_below="@+id/emotional"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:textSize="20dp"
         android:layout_alignParentBottom="false"
         android:layout_alignParentRight="false"
         android:layout_alignWithParentIfMissing="false" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/commentBox"
+        android:layout_below="@+id/dComment"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="false"
+        android:layout_alignParentRight="false"
+        android:layout_alignWithParentIfMissing="false"
+        android:background="#ffffffff" />
+
 </RelativeLayout>
+</ScrollView>
