--- a/app/src/main/res/layout/patient_menu_activity.xml
+++ b/app/src/main/res/layout/patient_menu_activity.xml
@@ -16,28 +16,31 @@
         android:contentDescription="@string/descLogo"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="29dp" />
+        android:layout_marginTop="30dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/welcome_to_paitentcare"
-        android:textSize="30sp"
         android:id="@+id/textView"
         android:layout_below="@+id/imageView"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="45dp"
+        android:singleLine="true"
+        android:textSize="27dp" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/my_health_summary"
         android:id="@+id/btnViewPastRecords"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/textView"
+        android:layout_marginTop="40dp"
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Submit Symptom Form"
         android:id="@+id/btnInputPainLevels"
@@ -46,14 +49,14 @@
 
     <Button
         style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/request_emergency_assistance"
         android:id="@+id/btnEmergency"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/btnInputPainLevels"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="42dp"
-        android:background="#ffff0400" />
+        android:background="#ffff0400"
+        android:layout_marginTop="30dp"/>
 
 
 </RelativeLayout>
